--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jamstack-demo",
+  "name": "nuxt-microcms",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,15 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
-    "@nuxtjs/dotenv": "^1.4.1",
     "marked": "^1.1.0",
-    "nuxt": "^2.13.0",
-    "sanitize-html": "^1.27.0",
-    "strip-bom": "^4.0.0"
+    "nuxt": "^2.13.0"
   },
-  "devDependencies": {
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5"
-  }
+  "devDependencies": {}
 }
